temp fix, container is covering links

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 	line-height: 40px;
 	margin-bottom: 100px;
    animation: fade-in 1.5s ease;
-   -webkit-animation: fade-in 1.5s ease;
+   -webkit-animation: fade-in 1.3s ease;
 }
 
 /*Top Navigation Bar*/
